added jwt dependencies, setup jwt in Program.cs and appsettings, setup access token logic in UserController
